* Changelog

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.17...dev][Unreleased]]

*** Added
*** Changed
+ *tetragono*: Do not measure observers by term by default in neural network state, which need to be toggled by function
  =set_term_observer= manually.
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.16...v0.3.17][v0.3.17]] - 2024-09-06

*** Added
+ *tetragono*: Add neural network state based on sampling methods.
+ *tetraku*: Add quantum chemistry model which reads Hamiltonian in openfermion format.
+ *tetragono*: Add support for tracing repeated points when setting hamiltonian term. To use this feature, call
  =state.hamiltonians.trace_repeated= after all the hamiltonian term has been set. For those term which will not be
  traced, user could exchange the edge indices and points at the same time. For example a tensor with edges name as
  =[O0, I0, O1, I1]= on points =(0,0,0)= and =(0,0,1)=, we can rename the tensor edge to =[O1, I1, O0, I0]= (it is
  rename, not transpose!), and apply it to points =(0,0,1)= and =(0,0,0)=, and the system does not change. But for terms
  which may be traced, we cannot exchange them. The order of edge indices hint the rule how to trace if points
  duplicated.
+ *tetragono*: Add support to combine hamiltonian terms on the same group of points with different orders by
  =sort_points=, which make the program faster for simple update and exact update.
+ *tetragono*: Add support to check whether the hamiltonians is hermitian by =check_hermite(threshold)=, which requires
  =sort_points= invoked first.
*** Removed
+ *tetragono*: Remove SIGINT handle in gradient descent.
*** Fixed
+ *tetragono*: Fix the import issue in tetragono.
+ *tetragono*: Fix missing signal SIGUSR1 in windows platform.

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.15...v0.3.16][v0.3.16]] - 2024-03-20

*** Fixed
+ *tetragono*: Fix the missing conjugate for the energy during calculation of natural gradient.